<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xmlns="http://maven.apache.org/POM/4.0.0"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<artifactId>weatherly</artifactId>
	<groupId>weatherly</groupId>
	<version>1.0.0</version>
	<packaging>jar</packaging>
	<name>Weatherly Application</name>

	<build>
		<resources>
			<resource>
				<directory>src/main/resources</directory>
			</resource>
			<resource>
				<directory>src/config</directory>
			</resource>
		</resources>

		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.6.1</version>
				<configuration>
					<source>1.8</source>
					<target>1.8</target>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>exec-maven-plugin</artifactId>
				<version>1.5.0</version>
				<executions>
					<execution>
						<goals>
							<goal>exec</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<executable>java</executable>
					<workingDirectory>${project.build.directory}/classes</workingDirectory>
					<mainClass>weatherly.AppMain</mainClass>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-dependency-plugin</artifactId>
				<executions>
					<execution>
						<id>copy-dependencies</id>
						<phase>prepare-package</phase>
						<goals>
							<goal>copy-dependencies</goal>
						</goals>
						<configuration>
							<outputDirectory>${project.build.directory}/release/lib</outputDirectory>
							<overWriteReleases>false</overWriteReleases>
							<overWriteSnapshots>false</overWriteSnapshots>
							<overWriteIfNewer>true</overWriteIfNewer>
						</configuration>
					</execution>
				</executions>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-resources-plugin</artifactId>
				<version>3.0.2</version>
				<executions>
					<execution>
						<id>copy-resources-for-package</id>
						<phase>package</phase>
						<goals>
							<goal>copy-resources</goal>
						</goals>
						<configuration>
							<outputDirectory>${project.build.directory}/release</outputDirectory>
							<encoding>UTF-8</encoding>
							<resources>
								<resource>
									<directory>src/config</directory>
								</resource>
								<resource>
									<directory>.</directory>
									<includes>
										<include>LICENSE</include>
									</includes>
								</resource>
							</resources>
						</configuration>
					</execution>
				</executions>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jar-plugin</artifactId>
				<version>2.4</version>
				<configuration>
					<outputDirectory>${project.build.directory}/release</outputDirectory>
					<finalName>weatherly</finalName>
					<archive>
						<manifest>
							<addClasspath>true</addClasspath>
							<mainClass>weatherly.AppMain</mainClass>
							<classpathPrefix>lib</classpathPrefix>
						</manifest>
						<manifestEntries>
							<Class-Path>.</Class-Path>
						</manifestEntries>
					</archive>
					<excludes>
						<exclude>**/meters.xml</exclude>
						<exclude>**/sources.xml</exclude>
					</excludes>
				</configuration>
			</plugin>

			<plugin>
				<groupId>com.akathist.maven.plugins.launch4j</groupId>
				<artifactId>launch4j-maven-plugin</artifactId>
				<version>1.7.21</version>
				<executions>
				  <execution>
					<id>l4j-clui</id>
					<phase>package</phase>
					<goals>
						<goal>launch4j</goal>
					</goals>
					<configuration>
					  <headerType>gui</headerType>
					  <outfile>${project.build.directory}/release/weatherly.exe</outfile>
					  <icon>src/main/resources/icons/weatherly.ico</icon>
					  <jar>${project.build.directory}/release/weatherly.jar</jar>
					  <errTitle>Weatherly</errTitle>
					  <classPath>
						<mainClass>weatherly.AppMain</mainClass>
						<addDependencies>false</addDependencies>
						<preCp>anything</preCp>
					  </classPath>
					  <jre>
						<minVersion>1.5.0</minVersion>
						<opts>
						  <opt>-Djava.endorsed.dirs=./endorsed</opt>
						</opts>
					  </jre>
					  <versionInfo>
						<fileVersion>1.0.0.0</fileVersion>
						<txtFileVersion>Alpha release</txtFileVersion>
						<fileDescription>Weather fetching application</fileDescription>
						<copyright>Piotr Styczynski MIT License</copyright>
						<productVersion>1.0.0.0</productVersion>
						<txtProductVersion>Alpha release</txtProductVersion>
						<productName>Weatherly</productName>
						<internalName>weatherly</internalName>
						<originalFilename>weatherly.exe</originalFilename>
					  </versionInfo>
					</configuration>
				  </execution>
				</executions>
			</plugin>
				
			<plugin>
				<groupId>com.ruleoftech</groupId>
				<artifactId>markdown-page-generator-plugin</artifactId>
				<version>1.0.0</version>
				<executions>
					<execution>
						<phase>package</phase>
						<goals>
							<goal>generate</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<inputDirectory>.</inputDirectory>
					<outputDirectory>${project.build.directory}/release</outputDirectory>
					<inputEncoding>UTF-8</inputEncoding>
					<outputEncoding>ISO-8859-15</outputEncoding>
				</configuration>
			</plugin>

		</plugins>
	</build>

	<dependencies>

		<dependency>
			<groupId>tec.units</groupId>
			<artifactId>unit-ri</artifactId>
			<version>1.0.2</version>
		</dependency>

		<dependency>
			<groupId>org.jsoup</groupId>
			<artifactId>jsoup</artifactId>
			<version>1.8.3</version>
		</dependency>

		<dependency>
			<groupId>org.pojava</groupId>
			<artifactId>pojava</artifactId>
			<version>2.3.0</version>
		</dependency>

		<dependency>
			<groupId>com.jfoenix</groupId>
			<artifactId>jfoenix</artifactId>
			<version>1.4.0</version>
		</dependency>

		<dependency>
			<groupId>org.kordamp.ikonli</groupId>
			<artifactId>ikonli-javafx</artifactId>
			<version>1.9.0</version>
		</dependency>

		<dependency>
			<groupId>org.kordamp.ikonli</groupId>
			<artifactId>ikonli-fontawesome-pack</artifactId>
			<version>1.9.0</version>
		</dependency>

		<dependency>
			<groupId>org.kordamp.ikonli</groupId>
			<artifactId>ikonli-weathericons-pack</artifactId>
			<version>1.9.0</version>
		</dependency>

		<dependency>
			<groupId>io.reactivex</groupId>
			<artifactId>rxjavafx</artifactId>
			<version>1.0.0</version>
		</dependency>

		<dependency>
			<groupId>io.reactivex</groupId>
			<artifactId>rxjava</artifactId>
			<version>1.2.4</version>
		</dependency>

		<dependency>
			<groupId>io.reactivex</groupId>
			<artifactId>rxnetty</artifactId>
			<version>0.4.20</version>
		</dependency>

		<dependency>
			<groupId>io.netty</groupId>
			<artifactId>netty-codec-http</artifactId>
			<version>4.1.5.Final</version>
		</dependency>

		<dependency>
			<groupId>log4j</groupId>
			<artifactId>log4j</artifactId>
			<version>1.2.17</version>
		</dependency>

		<dependency>
			<groupId>com.google.code.gson</groupId>
			<artifactId>gson</artifactId>
			<version>2.8.0</version>
		</dependency>

		<dependency>
			<groupId>org.ocpsoft.prettytime</groupId>
			<artifactId>prettytime</artifactId>
			<version>4.0.0.Final</version>
		</dependency>


	</dependencies>

</project>
